--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3.1'
 services:
   db:
-    image: postgres:10-alpine
-    restart: always
-    container_name: postgress-db
-    environment:
-      POSTGRES_PASSWORD: user
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
     ports:
       - 5432:5432
+    image: postgres:10-alpine
+    container_name: postgress-db
+    restart: always
+    environment:
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
