--- a/package.json
+++ b/package.json
@@ -40,20 +40,23 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
-    "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "chalk": "^4.0.0",
     "confabulous": "^1.7.0",
     "debug": "^4.1.1",
+    "error-handler-module": "^1.0.3",
+    "express": "^4.17.1",
+    "handy-postgres": "^1.3.1",
     "helmet": "^4.1.1",
     "hogan.js": "^3.0.2",
+    "http-status-codes": "^2.1.4",
     "make-manifest": "^1.0.4",
     "on-headers": "^1.0.2",
     "optimist": "^0.6.1",
     "optional": "^0.1.4",
     "prepper": "^1.2.0",
     "ramda": "^0.27.0",
-    "swagger-endpoint-validator": "^2.0.2",
+    "require-all": "^3.0.0",
     "systemic": "^3.3.7",
     "systemic-domain-runner": "^1.1.0",
     "systemic-express": "^1.1.1"
