--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "qa": "npm run lint && npm run test",
     "precommit": "npm run lint",
     "prepush": "npm run test",
-    "docker": "docker-compose --file ./docker/cicd/docker-compose.yml pull && docker-compose --file ./docker/cicd/docker-compose.yml up -d --force-recreate --remove-orphans"
+    "docker": "docker-compose --file ./docker/cicd/docker-compose.yml pull && docker-compose --file ./docker/cicd/docker-compose.yml up -d --force-recreate --remove-orphans",
+    "create-asyncapi-docs": "npx ag docs/asyncapi.yml @asyncapi/html-template -o docs/generated/asyncapi"
   },
   "husky": {
     "hooks": {
