--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "@asyncapi/generator": "^1.8.9",
+    "@asyncapi/html-template": "^0.23.7",
     "@hapi/boom": "^9.1.0",
     "bunyan": "^1.8.12",
     "chalk": "^4.0.0",
