--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,32 +1,22 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
 trigger:
 - master
 
-resources:
-- repo: self
+pr:
+- master
 
-variables:
-  tag: '$(Build.BuildId)'
+pool:
+  vmImage: ubuntu-latest
 
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+steps:
+  - task: Docker@2
+    displayName: Build an image
+    inputs:
+      repository: $(Build.Repository.Name)
+      Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
+      buildContext: "**"
+      tags: |
+        $(Build.BuildId)
+        latest
   - bash: |
       ERROR_UP=$((docker-compose --file ./docker/cicd/docker-compose.yml up --force -d --build) 2>&1)
       sleep 10
@@ -42,3 +32,10 @@ stages:
       echo "ERROR_DOWN=$ERROR_DOWN"
     failOnStderr: true
     displayName: 'test: execute'
+
+  - task: PublishTestResults@2
+    displayName: 'test: publish report'
+    inputs:
+      testResultsFormat: 'JUnit'
+      testResultsFiles: '**/junit.xml'
+      failTaskOnFailedTests: true
