--- a/.helm/Chart.yaml
+++ b/.helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
 description: Skill Matrix Backend
-name: gs-skill-matrix-backend
+name: dcsl-skillmatrix-api
 version: 0.1.0
 icon: https://avatars.githubusercontent.com/u/38781119?s=200&v=4
