--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,9 @@ steps:
   - bash: |
       ERROR_UP=$((docker-compose --file ./docker/cicd/docker-compose.yml up --force -d --build) 2>&1)
       sleep 10
-      docker exec dcsl-skillmatrix-api sh -c "npm run test:report" 2>&1
-      docker cp dcsl-skillmatrix-api:/usr/src/app/test-reports/junit.xml ./
-      docker cp dcsl-skillmatrix-api:/usr/src/app/test-reports/coverage/lcov.info ./lcov.info
+      docker exec gs-skill-matrix-backend sh -c "npm run test:report" 2>&1
+      docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/junit.xml ./
+      docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/coverage/lcov.info ./lcov.info
       sed -i 's|SF:/usr/src/app/|SF:|g' lcov.info
 
       echo "docker compose down"
