--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ steps:
   - task: Docker@2
     displayName: Build an image
     inputs:
+      containerRegistry: "Azure deployment - Dev"
       repository: $(Build.Repository.Name)
       command: "build"
       Dockerfile: "**/Dockerfile"
@@ -40,3 +41,14 @@ steps:
       testResultsFormat: 'JUnit'
       testResultsFiles: '**/junit.xml'
       failTaskOnFailedTests: true
+
+  - task: Docker@2
+    displayName: Push Docker image
+    condition: eq(variables['Build.SourceBranch'], 'refs/heads/master')
+    inputs:
+      containerRegistry: Azure deployment - Dev
+      repository: $(Build.Repository.Name)
+      command: push
+      tags: |
+        $(Build.BuildId)
+        latest
