--- a/gs-skill-matrix-backend-docker.yml
+++ b/gs-skill-matrix-backend-docker.yml
@@ -29,7 +29,7 @@ stages:
       vmImage: $(vmImageName)
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Build an image
       inputs:
         command: build
         repository: $(imageRepository)
@@ -54,3 +54,20 @@ stages:
           echo "ERROR_DOWN=$ERROR_DOWN"
       failOnStderr: true
       displayName: 'test: execute'
+    - task: PublishTestResults@2
+      displayName: 'test: publish report'
+      inputs:
+        testResultsFormat: 'JUnit'
+        testResultsFiles: '**/junit.xml'
+        failTaskOnFailedTests: true
+    - task: Docker@2
+      displayName: Push an image to container registry
+      inputs:
+        command: push
+        repository: $(imageRepository)
+        dockerfile: $(dockerfilePath)
+        buildContext: "**"
+        containerRegistry: $(dockerRegistryServiceConnection)
+        tags: |
+          $(tag)
+          latest
