--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.1'
 
 services:
   db:
+    image: postgres:12-alpine
     ports:
       - 5432:5432
-    image: postgres:12-alpine
-    restart: always
+    environment:
+      POSTGRES_PASSWORD: password
