--- a/gs-skill-matrix-backend-docker.yml
+++ b/gs-skill-matrix-backend-docker.yml
@@ -42,27 +42,27 @@ stages:
         tags: |
           $(tag)
           latest
-    - bash: |
-          ERROR_UP=$((docker-compose --file ./docker/cicd/docker-compose.yml up --force -d --build) 2>&1)
-          sleep 10
-          docker exec gs-skill-matrix-backend sh -c "npm run test:report" 2>&1
-          docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/junit.xml ./
-          docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/coverage/lcov.info ./lcov.info
-          sed -i 's|SF:/usr/src/app/|SF:|g' lcov.info
+    # - bash: |
+    #       ERROR_UP=$((docker-compose --file ./docker/cicd/docker-compose.yml up --force -d --build) 2>&1)
+    #       sleep 10
+    #       docker exec gs-skill-matrix-backend sh -c "npm run test:report" 2>&1
+    #       docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/junit.xml ./
+    #       docker cp gs-skill-matrix-backend:/usr/src/app/test-reports/coverage/lcov.info ./lcov.info
+    #       sed -i 's|SF:/usr/src/app/|SF:|g' lcov.info
 
-          echo "docker compose down"
-          ERROR_DOWN=$((docker-compose --file ./docker/cicd/docker-compose.yml down) 2>&1)
+    #       echo "docker compose down"
+    #       ERROR_DOWN=$((docker-compose --file ./docker/cicd/docker-compose.yml down) 2>&1)
 
-          echo "ERROR_UP=$ERROR_UP"
-          echo "ERROR_DOWN=$ERROR_DOWN"
-      failOnStderr: true
-      displayName: 'test: execute'
-    - task: PublishTestResults@2
-      displayName: 'test: publish report'
-      inputs:
-        testResultsFormat: 'JUnit'
-        testResultsFiles: '**/junit.xml'
-        failTaskOnFailedTests: true
+    #       echo "ERROR_UP=$ERROR_UP"
+    #       echo "ERROR_DOWN=$ERROR_DOWN"
+    #   failOnStderr: true
+    #   displayName: 'test: execute'
+    # - task: PublishTestResults@2
+    #   displayName: 'test: publish report'
+    #   inputs:
+    #     testResultsFormat: 'JUnit'
+    #     testResultsFiles: '**/junit.xml'
+    #     failTaskOnFailedTests: true
     - task: Docker@2
       displayName: Push an image to container registry
       inputs:
