--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "local": "SERVICE_ENV=local node index.js",
-    "start": "node index.js",
+    "start": "SERVICE_ENV=production NODE_ENV=production node index.js",
     "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --reporters=default",
     "test:report": "NODE_ENV=test jest --detectOpenHandles --forceExit --coverage",
     "lint": "eslint .",
