fix: add cross-env to scripts

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "local": "SERVICE_ENV=local node index.js",
-    "start": "SERVICE_ENV=production NODE_ENV=production node index.js",
-    "test": "NODE_ENV=test jest --detectOpenHandles --forceExit --reporters=default",
-    "test:report": "NODE_ENV=test jest --detectOpenHandles --forceExit --coverage",
+    "local": "cross-env SERVICE_ENV=local node index.js",
+    "start": "crosss-env SERVICE_ENV=production NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit --reporters=default",
+    "test:report": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit --coverage",
     "lint": "eslint .",
     "manifest": "node_modules/make-manifest/bin/make-manifest",
     "qa": "npm run lint && npm run test",
@@ -45,6 +45,7 @@
     "bunyan": "^1.8.12",
     "chalk": "^4.0.0",
     "confabulous": "^1.7.0",
+    "cross-env": "^7.0.3",
     "debug": "^4.1.1",
     "error-handler-module": "^1.0.3",
     "express": "^4.17.1",
