--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "local": "cross-env SERVICE_ENV=local node index.js",
     "start": "SERVICE_ENV=production NODE_ENV=production node index.js",
-    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit --reporters=default",
+    "test": "cross-env NODE_ENV=test SERVICE_ENV=test jest --detectOpenHandles --forceExit --reporters=default",
     "test:report": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit --coverage",
     "lint": "eslint .",
     "manifest": "node_modules/make-manifest/bin/make-manifest",
