--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,6 +58,7 @@ steps:
 - task: SonarCloudPrepare@1
   displayName: "sonarcloud: prepare analysis"
   inputs:
+    SonarCloud: SonarCloud
     organization: 'dcslgs-spain'
     scannerMode: 'CLI'
     configMode: 'manual'
