fix: azure-pipelines yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ steps:
 - task: SonarCloudPrepare@1
   displayName: "sonarcloud: prepare analysis"
   inputs:
-    SonarCloud: 'SonarCloud'
+    SonarCloud: 'dcslgs-sonarcloud'
     organization: 'dcslgs-spain'
     scannerMode: 'CLI'
     configMode: 'manual'
